// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should allow classNames 1`] = `
<span
  className="icon some-class"
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    viewBox="0 0 10 10"
  >
    <use
      xlinkHref="#icon-clear"
    />
  </svg>
</span>
`;

exports[`Icon should render svg normally 1`] = `
<span
  className="icon "
>
  <svg
    aria-hidden="true"
    className="icon__svg"
    viewBox="0 0 10 10"
  >
    <use
      xlinkHref="#icon-clear"
    />
  </svg>
</span>
`;
